syntax = "proto3";

import "gogo/protobuf/gogoproto/gogo.proto";
import "protobuf/types/struct.proto";

package mesg.types;
option go_package = "github.com/mesg-foundation/engine/execution";

option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = true;

// Execution represents a request of an execution.
message Execution {
  // Hash is a unique hash to identify this execution's request.
  bytes hash = 1 [
    (gogoproto.moretags) = 'hash:"-"',
    (gogoproto.customtype) = "github.com/mesg-foundation/engine/hash.Hash",
    (gogoproto.nullable) = false
  ];

  // parentResultHash is the unique hash of parent execution.
  // if execution is triggered by another one,
  // dependency execution considered as the parent.
  bytes parentResultHash = 2 [
    (gogoproto.moretags) = 'hash:"name:2"',
    (gogoproto.customtype) = "github.com/mesg-foundation/engine/hash.Hash",
    (gogoproto.nullable) = false
  ];

  // eventHash is unique event hash.
  bytes eventHash = 3 [
    (gogoproto.moretags) = 'hash:"name:3"',
    (gogoproto.customtype) = "github.com/mesg-foundation/engine/hash.Hash",
    (gogoproto.nullable) = false
  ];

  // instanceHash is hash of the instance that can proceed an execution
  bytes instanceHash = 5 [
    (gogoproto.moretags) = 'hash:"name:5"',
    (gogoproto.customtype) = "github.com/mesg-foundation/engine/hash.Hash",
    (gogoproto.nullable) = false
  ];

  // taskKey is the key of the task of this execution.
  string taskKey = 6 [
    (gogoproto.moretags) = 'hash:"name:6"'
  ];

  // inputs data of the execution.
  mesg.protobuf.Struct inputs = 7 [
    (gogoproto.moretags) = 'hash:"name:7"'
  ];

  // tags are optionally associated with execution by the user.
  repeated string tags = 10 [
    (gogoproto.moretags) = 'hash:"name:10"'
  ];

  // processHash is the unique hash of the process associated to this execution.
  bytes processHash = 11 [
    (gogoproto.moretags) = 'hash:"name:11"',
    (gogoproto.customtype) = "github.com/mesg-foundation/engine/hash.Hash",
    (gogoproto.nullable) = false
  ];

  // node key of the process.
  string nodeKey = 12 [
    (gogoproto.moretags) = 'hash:"name:12"'
  ];

  // runner that should execute this execution.
  bytes executorHash = 13 [
    (gogoproto.moretags) = 'hash:"name:13"',
    (gogoproto.customtype) = "github.com/mesg-foundation/engine/hash.Hash",
    (gogoproto.nullable) = false
  ];
}
